src/objects/inscor__Account_Part_Master__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Part Masters</relationshipLabel>
        <relationshipName>Account_Part_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Alternate_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A new alternate part number record will be created with the relationship of &quot;Customer Part Number&quot;, and a description with the Account Name</inlineHelpText>
        <label>Create Alternate Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proprietary Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Part Masters (Customer Part Number)</relationshipLabel>
        <relationshipName>Account_Part_Masters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Part Masters</relationshipLabel>
        <relationshipName>Account_Part_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Part Master</label>
    <nameField>
        <displayFormat>APM-{0}</displayFormat>
        <label>Account Part Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Part Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>